--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -10885,4 +10885,13 @@ a.text-dark:focus {
 
 }
 
+#footer {
+    position: fixed;
+    height: 50px;
+    background-color: red;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
+}
 
