--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,16 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//Noty
+@import '~noty/src/noty';
+@import '~noty/src/themes/bootstrap-v4';
 
 //Custom code
 @import "main";
