--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -58,4 +58,11 @@ h3{
   font-family: 'Dancing Script', cursive;
   font-size: 30px!important;
 }
-
+.card-columns {
+    @include media-breakpoint-only(lg) {
+        column-count: 4;
+    }
+    @include media-breakpoint-only(xl) {
+        column-count: 5;
+    }
+}
