--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -11319,7 +11319,6 @@ h3 {
   font-size: 30px !important;
 }
 
-
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .card-columns {
     -webkit-column-count: 4;
@@ -11334,6 +11333,7 @@ h3 {
        -moz-column-count: 5;
             column-count: 5;
   }
+}
 
 .text-green {
   color: #96C277;
@@ -11382,6 +11382,5 @@ h3 {
   right: 30px;
   top: 30px;
   font-size: 60px;
-
 }
 
