--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -34,10 +34,11 @@ h1{
 
 h2{
   font-size: 20px!important;
+  font-weight: 500;
 }
 
 h3{
-  font-size: 18px!important;
+  font-size: 16px!important;
 }
 
 @media (min-width: 750px) {
@@ -68,7 +69,6 @@ h3{
     }
 }
 
-
 .text-green{
   color: #96C277;
 }
@@ -82,8 +82,6 @@ h3{
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
-
-
 
 .overlay{
   width: 100%;
@@ -100,17 +98,28 @@ h3{
   text-align: center;
   position: relative;
   top: 15%;
-  margin-top: 4%;
-  padding-left: 100px;
-  padding-right: 100px;
+  margin-top: 20%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .overlay p{
   color: #fff;
   display: block;
-  font-size: 30px;
+  font-size: 15px;
   text-shadow:  2px 1px black;
   margin-bottom: 2%;
+}
+
+@media (min-width: 800px){
+  .overlay p{
+    font-size: 30px;
+  }
+  .content{
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 4%;
+  }
 }
 
 .overlay #closeHelp{
@@ -123,6 +132,13 @@ h3{
 
 #openHelp{
   cursor: pointer;
+}
+
+.small-input{
+  input{
+    width: 50%;
+  }
+
 }
 
 
