Stijlen pagina's afgestemd

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,3 +19,8 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 $enable-gradients: true;
+
+$success: #3C734F;
+$primary: #0A848A;
+$secondary: #e36f00;
+$danger: #BF8360;
