--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -10,7 +10,7 @@ main {
 
 body{
   background: rgb(255,255,255);
-  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(137,187,103,1) 100%);
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(38,122,70,1) 99%);
   font-family: 'Nunito', sans-serif;
 }
 
@@ -97,8 +97,8 @@ h3{
 .content{
   text-align: center;
   position: relative;
-  top: 15%;
-  margin-top: 20%;
+  top: 10%;
+  margin-top: 10%;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -110,11 +110,12 @@ h3{
   text-shadow:  2px 1px black;
   margin-bottom: 2%;
 
+
 }
 
 @media (min-width: 800px){
   .overlay p{
-    font-size: 30px;
+    font-size: 20px;
   }
   .content{
     padding-left: 100px;
@@ -130,7 +131,6 @@ h3{
   font-size: 60px;
 }
 
-
 #openHelp{
   cursor: pointer;
 }
@@ -139,8 +139,19 @@ h3{
   input{
     width: 50%;
   }
-
 }
 
+.nav-link:hover{
+  border: 1px solid $secondary;
+  border-radius: 0.25rem;
+}
+
+.white-hover:hover{
+  color: white!important;
+}
+
+.handleiding{
+  font-size: 12px;
+}
 
 
